amq-monitor/Route_prometheus-amq-0.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-amq-0
  labels:
    app: prometheus
    prometheus: amq
spec:
  to:
    kind: Service
    name: prometheus-amq-0-svc
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
